[package]
name = "http"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
bytes = "1.10.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
serde = "1.0.219"
serde_json = "1.0.140"
