[package]
name = "relay"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
clap = { version = "4.5.37", features = ["derive"] }
nanoid = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.2", features = ["full"] }
traccia = "2.2.1"
shared = { path = "../shared" }