[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.36", features = ["derive"] }
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.11", features = ["tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
traccia = "2.2.1"
console = { path = "../console" }
mini-moka = "0.10.3"
nanoid = "0.4.0"
url = "2.5.4"

