[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
hyper = { version = "1.6.0", features = ["server", "http1"] }
tokio = { version = "1.44.2", features = ["full"] }
traccia = "2.2.1"
console = { path = "../console" }
http = { path = "../http" }
mini-moka = "0.10.3"
nanoid = "0.4.0"
sqlx = { version = "0.8.5", features = ["sqlite", "runtime-tokio-native-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
