[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.0", features = ["full"] }
console = { path = "../console" }
async-trait = "0.1.88"
traccia = "2.2.1"
clap = { version = "4.5.37", features = ["derive"] }
chrono = "0.4.41"
reqwest = { version = "0.12.15", features = ["json"] }
shared = { path = "../shared" }
uuid = { version = "1.16.0", features = ["v4"] }
